tools/flow9/tests/cpp/array_index.flow
native println : io (?) -> void = Native.println;

Maybe ::= None, Some;

None();
Some();

main() {
	// error: ‘__index’ was not declared in this scope

	arr : [Maybe] = [Some(), None()];
	value = arr[1];
	println(switch (value) {
		Some(): "some";
		None(): "none";
	}); // none

	intArr = [1, 2, 3, 4, 5, 6, 7];
	println(intArr[0] + intArr[(1 + 1) * 2] + intArr[intArr[5]]); // 1 + 5 + 7 = 13
}
